--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fintech-backend",
+  "name": "fintech-challenge-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
